--- a/theme/src/scss/root/t3kit-root.scss
+++ b/theme/src/scss/root/t3kit-root.scss
@@ -36,3 +36,15 @@
   --t3-ce-bitl-subheader-size: 26;
   --t3-ce-bitl-subheader-font-weight: 600;
 }
+
+.ce-img-text-link__wrp {
+  --t3-ce-itl-header-font-weight: 300;
+  --t3-ce-itl-subheader-font-weight: 600;
+}
+
+.ce-icon-text-link__wrp {
+  --t3-ce-icotl-header-font-weight: 600;
+  --t3-ce-icotl-header-size: 22;
+  --t3-ce-icotl-subheader-font-weight: 300;
+  --t3-ce-icotl-subheader-size: 22;
+}
