[TASK] update startpage BE layout

--- a/Resources/Private/Templates/Page/StartPage.html
+++ b/Resources/Private/Templates/Page/StartPage.html
@@ -92,12 +92,12 @@
 
       <div class="container-wrp">
         <div class="container">
-          <div class="row">
-            <div class="col-lg-6 g-0 align-self-center figure-lg-margin-0">
+          <div class="row g-0">
+            <div class="col-lg-6 align-self-center figure-lg-margin-0">
               <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5001}" />
             </div>
 
-            <div class="col-lg-5 g-0 offset-lg-1 align-self-center">
+            <div class="col-lg-5 offset-lg-1 align-self-center">
               <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5002}" />
             </div>
           </div>
@@ -106,12 +106,12 @@
 
       <div class="container-wrp">
         <div class="container">
-          <div class="row">
-            <div class="col-md-5 g-0 align-self-center">
+          <div class="row g-0">
+            <div class="col-md-5 align-self-center">
               <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5003}" />
             </div>
 
-            <div class="col-md-6 g-0 offset-md-1 align-self-center">
+            <div class="col-md-6 offset-md-1 align-self-center">
               <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5004}" />
             </div>
           </div>
@@ -120,7 +120,7 @@
 
       <div class="container-wrp pt-5 pb-5">
         <div class="container">
-          <div class="row">
+          <div class="row g-xl-5">
             <div class="col-md-4">
               <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3307}" />
             </div>
@@ -131,6 +131,24 @@
 
             <div class="col-md-4">
               <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3309}" />
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container-wrp pt-5 pb-5">
+        <div class="container">
+          <div class="row ">
+            <div class="col-md-4">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3310}" />
+            </div>
+
+            <div class="col-md-4">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3311}" />
+            </div>
+
+            <div class="col-md-4">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3312}" />
             </div>
           </div>
         </div>
