--- a/Resources/Private/Templates/ContentElements/Special/SiteFooter.html
+++ b/Resources/Private/Templates/ContentElements/Special/SiteFooter.html
@@ -16,33 +16,40 @@
           <f:if condition="{flexform.show_address} || {files}">
             <div class="col-md">
 
-              <f:if condition="{files}">
+              <f:if condition="{files} || {svg_image}">
                 <div class="ce-site-footer__logo">
-                  <f:render partial="Media/Image" arguments="{_all}" />
+                  <f:if condition="{files}">
+                    <f:render partial="Media/Image" arguments="{_all}" />
+                  </f:if>
+                  <f:if condition="{svg_image}">
+                    <f:render partial="Media/Svg" arguments="{data: data, files: svg_image}" />
+                  </f:if>
                 </div>
               </f:if>
 
-              <div class="ce-site-footer__info">
-                <div class="ce-site-footer__info-title-wrp">
-                  <span class="ce-site-footer__info-title">{flexform.name}</span>
+              <f:if condition="{flexform.show_address}">
+                <div class="ce-site-footer__info">
+                  <div class="ce-site-footer__info-title-wrp">
+                    <span class="ce-site-footer__info-title">{flexform.name}</span>
+                  </div>
+
+                  <address class="ce-site-footer__address-wrp">
+                    <span class="ce-site-footer__address">
+                      <f:format.nl2br>{flexform.address}</f:format.nl2br>
+                    </span>
+
+                    <div class="ce-site-footer__phone">
+                      <f:link.typolink parameter="{flexform.contactPhone_link}" class="ce-site-footer__phone-item ce-site-footer__link">
+                        {flexform.contactPhone_title}
+                      </f:link.typolink>
+                    </div>
+
+                    <div class="ce-site-footer__email">
+                      <f:link.typolink parameter="{flexform.email}" class="ce-site-footer__email-item ce-site-footer__link"/>
+                    </div>
+                  </address>
                 </div>
-
-                <address class="ce-site-footer__address-wrp">
-                  <span class="ce-site-footer__address">
-                    <f:format.nl2br>{flexform.address}</f:format.nl2br>
-                  </span>
-
-                  <div class="ce-site-footer__phone">
-                    <f:link.typolink parameter="{flexform.contactPhone_link}" class="ce-site-footer__phone-item ce-site-footer__link">
-                      {flexform.contactPhone_title}
-                    </f:link.typolink>
-                  </div>
-
-                  <div class="ce-site-footer__email">
-                    <f:link.typolink parameter="{flexform.email}" class="ce-site-footer__email-item ce-site-footer__link"/>
-                  </div>
-                </address>
-              </div>
+              </f:if>
 
             </div>
           </f:if>
