[TASK] implement side navigation

--- a/Resources/Private/Templates/Page/2columnsSidenav.html
+++ b/Resources/Private/Templates/Page/2columnsSidenav.html
@@ -71,6 +71,9 @@
             </div>
 
             <div class="col-md-4">
+              <div class="sidenav-wrp">
+                <f:render partial="Nav/SideNavigation" arguments="{_all}" />
+              </div>
             </div>
           </div>
         </div>
