--- a/Resources/Private/Templates/Page/3columnsSidenav.html
+++ b/Resources/Private/Templates/Page/3columnsSidenav.html
@@ -75,6 +75,9 @@
             </div>
 
             <div class="col-md-3">
+              <div class="sidenav-wrp">
+                <f:render partial="Nav/SideNavigation" arguments="{_all}" />
+              </div>
             </div>
           </div>
         </div>
