--- a/Resources/Private/Templates/Page/Sidenav252columns5025.html
+++ b/Resources/Private/Templates/Page/Sidenav252columns5025.html
@@ -63,6 +63,9 @@
         <div class="container">
           <div class="row">
             <div class="col-md-3">
+              <div class="sidenav-wrp">
+                <f:render partial="Nav/SideNavigation" arguments="{_all}" />
+              </div>
             </div>
 
             <div class="col-md-6">
