--- a/Resources/Private/Templates/Page/Sidenav2columns.html
+++ b/Resources/Private/Templates/Page/Sidenav2columns.html
@@ -63,6 +63,9 @@
         <div class="container">
           <div class="row">
             <div class="col-md-4">
+              <div class="sidenav-wrp">
+                <f:render partial="Nav/SideNavigation" arguments="{_all}" />
+              </div>
             </div>
 
             <div class="col-md-4">
