--- a/theme/src/scss/main.scss
+++ b/theme/src/scss/main.scss
@@ -1,58 +1,44 @@
-@use 'root/root';
+@use 'global/root';
 
-// ===== bootstrap reboot =====
-@use 'bootstrap';
+// ===== bootstrap reboot & grid =====
+@use 'scss/bootstrap';
 
 // ===== typography =====
-@use 'main/typography';
-// ===== nav =====
-@use 'main/nav/breadcrumb';
-@use 'main/nav/side-navigation';
-@use 'main/nav/skip-links';
-@use 'main/nav/target-blank';
-@use 'main/nav/scroll-to-top';
+@use 'global/typography';
 
-// // ===== helpers =====
-@use 'main/helpers/grid';
-@use 'main/helpers/media';
-@use 'main/helpers/content-margins';
-@use 'main/helpers/buttons';
-@use 'main/helpers/text';
-@use 'main/helpers/border-radius';
-@use 'main/helpers/print';
-@use 'main/helpers/background';
+// ===== helpers =====
+@use 'global/helpers/grid';
+@use 'global/helpers/media';
+@use 'global/helpers/content-margins';
+@use 'global/helpers/buttons';
+@use 'global/helpers/text';
+@use 'global/helpers/border-radius';
+@use 'global/helpers/print';
+@use 'global/helpers/background';
+
+// ===== nav =====
+@use 'global/nav/breadcrumb';
+@use 'global/nav/side-navigation';
+@use 'global/nav/skip-links';
+@use 'global/nav/target-blank';
+@use 'global/nav/scroll-to-top';
 
 // ===== content-elements =====
-@use 'main/content-elements/table';
-@use 'main/content-elements/textmedia';
-@use 'main/content-elements/textpic';
-@use 'main/content-elements/simple-site-header';
-@use 'main/content-elements/site-footer';
-@use 'main/content-elements/hero-image';
-@use 'main/content-elements/big-icon-text-link';
-@use 'main/content-elements/image-text-link';
-@use 'main/content-elements/icon-text-link';
-// @use 'content-elements/footer';
-// @use 'content-elements/big-icon-text-button';
-// @use 'content-elements/accordion';
+@use 'content-elements/table';
+@use 'content-elements/textmedia';
+@use 'content-elements/textpic';
+@use 'content-elements/simple-site-header';
+@use 'content-elements/site-footer';
+@use 'content-elements/hero-image';
+@use 'content-elements/big-icon-text-link';
+@use 'content-elements/image-text-link';
+@use 'content-elements/icon-text-link';
 // @use 'content-elements/contact-card';
-// @use 'content-elements/icon-text-button';
-// @use 'content-elements/hero-image';
-// // @use 'content-elements/icon-text-button';
-// // @use 'content-elements/image-text-link';
-// // @use 'content-elements/logo-carousel';
-// // @use 'content-elements/parallax';
 // @use 'content-elements/quote';
-// // @use 'content-elements/slider';
-// // @use 'content-elements/social-icons';
-// @use 'content-elements/textpic';
-// @use 'content-elements/textmedia';
 // @use 'content-elements/divider-icon';
 
 // // ===== plugins =====
-@use 'main/plugins/lightbox';
-// // @use 'plugins/news/';
-// // @use 'plugins/search';
+@use 'plugins/lightbox';
 
-// t3kit design
-@use 'root/t3kit-root';
+// themes
+@use 'theme/t3kit10';
