--- a/theme/src/scss/scss/bootstrap/variables/_index.scss
+++ b/theme/src/scss/scss/bootstrap/variables/_index.scss
@@ -32,6 +32,6 @@ $enable-negative-margins: true;
 
 // ==============================
 // Import Bootstrap default variables
-@import "../../../node_modules/bootstrap/scss/functions";
-@import "../../../node_modules/bootstrap/scss/variables";
+@import "../../../../../../node_modules/bootstrap/scss/functions";
+@import "../../../../../../node_modules/bootstrap/scss/variables";
 // ==============================
