--- a/Resources/Private/Templates/Page/StartPage.html
+++ b/Resources/Private/Templates/Page/StartPage.html
@@ -20,18 +20,18 @@
     # __________________________
     # 1000-10000 -> All Content
     # ***
-    # colPos = [1000-1099]  -> 100% column width [col-md-12] (e.g., one column layout)
-    # colPos = [9100-9199]  -> 91% column width [col-md-11] (e.g., two columns layout [91%/8%])
-    # colPos = [8300-8399]  -> 83% column width [col-md-10] (e.g., two columns layout [83%/16%])
-    # colPos = [7500-7599]  -> 75% column width [col-md-9] (e.g., two columns layout [75%/25%])
-    # colPos = [6600-6699]  -> 66% column width [col-md-8] (e.g., two columns layout [66%/33%])
-    # colPos = [5800-5899]  -> 58% column width [col-md-7] (e.g., two columns layout [58%/41%])
-    # colPos = [5000-5099]  -> 50% column width [col-md-6] (e.g., two equal columns layout)
-    # colPos = [4100-4199]  -> 41% column width [col-md-5] (e.g., two columns layout [41%/58%])
-    # colPos = [3300-3399]  -> 33% column width [col-md-4] (e.g., three equal columns layout)
-    # colPos = [2500-2599]  -> 25% column width [col-md-3] (e.g., four equal columns layout)
-    # colPos = [1600-1699]  -> 16% column width [col-md-2] (e.g., six equal columns layout)
-    # colPos = [800-899]    -> 8% column width [col-md-1] (e.g., twelve equal columns layout)
+    # colPos = [1000-1099]  -> 100% column width [col-12] (e.g., one column layout)
+    # colPos = [9100-9199]  -> 91% column width [col-11] (e.g., two columns layout [91%/8%])
+    # colPos = [8300-8399]  -> 83% column width [col-10] (e.g., two columns layout [83%/16%])
+    # colPos = [7500-7599]  -> 75% column width [col-9] (e.g., two columns layout [75%/25%])
+    # colPos = [6600-6699]  -> 66% column width [col-8] (e.g., two columns layout [66%/33%])
+    # colPos = [5800-5899]  -> 58% column width [col-7] (e.g., two columns layout [58%/41%])
+    # colPos = [5000-5099]  -> 50% column width [col-6] (e.g., two equal columns layout)
+    # colPos = [4100-4199]  -> 41% column width [col-5] (e.g., two columns layout [41%/58%])
+    # colPos = [3300-3399]  -> 33% column width [col-4] (e.g., three equal columns layout)
+    # colPos = [2500-2599]  -> 25% column width [col-3] (e.g., four equal columns layout)
+    # colPos = [1600-1699]  -> 16% column width [col-2] (e.g., six equal columns layout)
+    # colPos = [800-899]    -> 8% column width [col-1] (e.g., twelve equal columns layout)
     # __________________________
   </f:comment>
 
@@ -56,15 +56,15 @@
       <div class="container-wrp pt-2 pb-5">
         <div class="container">
           <div class="row">
-            <div class="col-md-4">
+            <div class="col-lg-4">
               <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3301}" />
             </div>
 
-            <div class="col-md-4">
+            <div class="col-lg-4">
               <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3302}" />
             </div>
 
-            <div class="col-md-4">
+            <div class="col-lg-4">
               <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3303}" />
             </div>
           </div>
@@ -74,15 +74,15 @@
       <div class="container-wrp black-bg-color pt-5 pb-5">
         <div class="container">
           <div class="row">
-            <div class="col-md-4">
+            <div class="col-lg-4">
               <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3304}" />
             </div>
 
-            <div class="col-md-4">
+            <div class="col-lg-4">
               <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3305}" />
             </div>
 
-            <div class="col-md-4">
+            <div class="col-lg-4">
               <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3306}" />
             </div>
           </div>
@@ -107,11 +107,11 @@
       <div class="container-wrp">
         <div class="container">
           <div class="row g-0">
-            <div class="col-md-5 align-self-center">
+            <div class="col-lg-5 align-self-center">
               <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5003}" />
             </div>
 
-            <div class="col-md-6 offset-md-1 align-self-center">
+            <div class="col-lg-6 offset-lg-1 align-self-center">
               <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5004}" />
             </div>
           </div>
@@ -121,15 +121,15 @@
       <div class="container-wrp pt-5 pb-5">
         <div class="container">
           <div class="row g-xl-5">
-            <div class="col-md-4">
+            <div class="col-lg-4">
               <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3307}" />
             </div>
 
-            <div class="col-md-4">
+            <div class="col-lg-4">
               <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3308}" />
             </div>
 
-            <div class="col-md-4">
+            <div class="col-lg-4">
               <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3309}" />
             </div>
           </div>
@@ -139,15 +139,15 @@
       <div class="container-wrp pt-5 pb-5">
         <div class="container">
           <div class="row ">
-            <div class="col-md-4">
+            <div class="col-lg-4">
               <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3310}" />
             </div>
 
-            <div class="col-md-4">
+            <div class="col-lg-4">
               <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3311}" />
             </div>
 
-            <div class="col-md-4">
+            <div class="col-lg-4">
               <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3312}" />
             </div>
           </div>
