[TASK] update heading partials, divide heading semantic and style

--- a/Resources/Private/Partials/ContentElements/Header/HeaderText.html
+++ b/Resources/Private/Partials/ContentElements/Header/HeaderText.html
@@ -5,6 +5,7 @@
       <f:render partial="Header/Render/HeaderText" arguments="{
         header_text: data.header_text,
         header_layout: data.header_layout,
+        header_style: data.header_style,
         header_position: '{f:if(condition: data.header_position, then: \'text-{data.header_position}\')}',
         header_link: data.header_link}" />
   </f:if>
