--- a/Resources/Private/Partials/ContentElements/Header/Render/SubHeader.html
+++ b/Resources/Private/Partials/ContentElements/Header/Render/SubHeader.html
@@ -2,33 +2,33 @@
 
 <f:if condition="{subheader}">
   <f:switch expression="{layout}">
-    <f:case value="0">
-      <h2 class="{position} subheader-item">
+    <f:case value="1">
+      <h2 class="{position} {subheader_style} subheader-item">
         {subheader}
       </h2>
     </f:case>
-    <f:case value="1">
-      <h3 class="{position} subheader-item">
+    <f:case value="2">
+      <h3 class="{position} {subheader_style} subheader-item">
         {subheader}
       </h3>
     </f:case>
-    <f:case value="2">
-      <h4 class="{position} subheader-item">
+    <f:case value="3">
+      <h4 class="{position} {subheader_style} subheader-item">
         {subheader}
       </h4>
     </f:case>
-    <f:case value="3">
-      <h5 class="{position} subheader-item">
+    <f:case value="4">
+      <h5 class="{position} {subheader_style} subheader-item">
         {subheader}
       </h5>
     </f:case>
-    <f:case value="4">
-      <h6 class="{position} subheader-item">
+    <f:case value="5">
+      <h6 class="{position} {subheader_style} subheader-item">
         {subheader}
       </h6>
     </f:case>
-    <f:case value="5">
-      <h6 class="{position} subheader-item">
+    <f:case value="6">
+      <h6 class="{position} {subheader_style} subheader-item">
         <small>{subheader}</small>
       </h6>
     </f:case>
