--- a/Resources/Private/Partials/ContentElements/Header/All.html
+++ b/Resources/Private/Partials/ContentElements/Header/All.html
@@ -5,11 +5,13 @@
       <f:render partial="Header/Render/Header" arguments="{
         header: data.header,
         layout: data.header_layout,
+        style: data.header_style,
         position: '{f:if(condition: data.header_position, then: \'text-{data.header_position}\')}',
         link: data.header_link}" />
       <f:render partial="Header/Render/SubHeader" arguments="{
         subheader: data.subheader,
         layout: data.header_layout,
+        subheader_style: data.subheader_style,
         position: '{f:if(condition: data.header_position, then: \'text-{data.header_position}\')}' }" />
       <f:render partial="Header/Render/Date" arguments="{
         date: data.date,
