--- a/Resources/Private/Partials/ContentElements/Header/AllHeaderText.html
+++ b/Resources/Private/Partials/ContentElements/Header/AllHeaderText.html
@@ -5,11 +5,13 @@
       <f:render partial="Header/Render/HeaderText" arguments="{
         header_text: data.header_text,
         header_layout: data.header_layout,
+        header_style: data.header_style,
         header_position: '{f:if(condition: data.header_position, then: \'text-{data.header_position}\')}',
         header_link: data.header_link}" />
       <f:render partial="Header/Render/SubHeaderText" arguments="{
         subheader_text: data.subheader_text,
         header_layout: data.header_layout,
+        subheader_style: data.subheader_style,
         header_position: '{f:if(condition: data.header_position, then: \'text-{data.header_position}\')}' }" />
   </f:if>
 </f:if>
