--- a/Resources/Private/Partials/ContentElements/Header/Header.html
+++ b/Resources/Private/Partials/ContentElements/Header/Header.html
@@ -5,6 +5,7 @@
       <f:render partial="Header/Render/Header" arguments="{
         header: data.header,
         layout: data.header_layout,
+        style: data.header_style,
         position: '{f:if(condition: data.header_position, then: \'text-{data.header_position}\')}',
         link: data.header_link}" />
   </f:if>
