--- a/Resources/Private/Partials/ContentElements/Header/Render/Header.html
+++ b/Resources/Private/Partials/ContentElements/Header/Render/Header.html
@@ -2,33 +2,33 @@
 
 <f:if condition="{header}">
   <f:switch expression="{layout}">
-    <f:case value="0">
-      <h1 class="{position} header-item">
+    <f:case value="1">
+      <h1 class="{position} {style} header-item">
         <f:link.typolink parameter="{link}">{header}</f:link.typolink>
       </h1>
     </f:case>
-    <f:case value="1">
-      <h2 class="{position} header-item">
+    <f:case value="2">
+      <h2 class="{position} {style} header-item">
         <f:link.typolink parameter="{link}">{header}</f:link.typolink>
       </h2>
     </f:case>
-    <f:case value="2">
-      <h3 class="{position} header-item">
+    <f:case value="3">
+      <h3 class="{position} {style} header-item">
         <f:link.typolink parameter="{link}">{header}</f:link.typolink>
       </h3>
     </f:case>
-    <f:case value="3">
-      <h4 class="{position} header-item">
+    <f:case value="4">
+      <h4 class="{position} {style} header-item">
         <f:link.typolink parameter="{link}">{header}</f:link.typolink>
       </h4>
     </f:case>
-    <f:case value="4">
-      <h5 class="{position} header-item">
+    <f:case value="5">
+      <h5 class="{position} {style} header-item">
         <f:link.typolink parameter="{link}">{header}</f:link.typolink>
       </h5>
     </f:case>
-    <f:case value="5">
-      <h6 class="{position} header-item">
+    <f:case value="6">
+      <h6 class="{position} {style} header-item">
         <f:link.typolink parameter="{link}">{header}</f:link.typolink>
       </h6>
     </f:case>
