--- a/Resources/Private/Partials/ContentElements/Header/SubHeader.html
+++ b/Resources/Private/Partials/ContentElements/Header/SubHeader.html
@@ -5,6 +5,7 @@
       <f:render partial="Header/Render/SubHeader" arguments="{
         subheader: data.subheader,
         layout: data.header_layout,
+        subheader_style: data.subheader_style,
         position: '{f:if(condition: data.header_position, then: \'text-{data.header_position}\')}' }" />
   </f:if>
 </f:if>
