--- a/Resources/Private/Partials/ContentElements/Header/SubHeaderText.html
+++ b/Resources/Private/Partials/ContentElements/Header/SubHeaderText.html
@@ -5,6 +5,7 @@
       <f:render partial="Header/Render/SubHeaderText" arguments="{
         subheader_text: data.subheader_text,
         header_layout: data.header_layout,
+        subheader_style: data.subheader_style,
         header_position: '{f:if(condition: data.header_position, then: \'text-{data.header_position}\')}' }" />
   </f:if>
 </f:if>
