--- a/Resources/Private/Partials/Page/Nav/SideNavigation.html
+++ b/Resources/Private/Partials/Page/Nav/SideNavigation.html
@@ -3,7 +3,7 @@
 <f:variable name="level" value="1" />
 
 <f:if condition="{sideNavigation}">
-    <nav class="sidenav sidenav-page-partial">
+    <nav class="sidenav sidenav-page-partial" aria-label="Side Navigation">
       <f:render section="sideNavigation" arguments="{menu: sideNavigation, level: level}" />
     </nav>
 </f:if>
