--- a/Resources/Private/Templates/ContentElements/Special/SimpleSiteHeader.html
+++ b/Resources/Private/Templates/ContentElements/Special/SimpleSiteHeader.html
@@ -20,6 +20,7 @@
 <f:section name="mainNavigation">
 
     <nav id="main-navigation"
+      aria-label="Global"
       class="main-navigation {flexform.main_nav_mobile_breakpoint}">
       <div class="main-navigation__container
         {flexform.main_nav_mobile_toggle_position}
